tests/failing/bracket.ml
let _ =
  match a with
  | b ->
    c [
      d [
        e
      ]
    ]
  | b' ->
    (c' [
       d' [
         e'
       ]
     ])
